<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="#D9EBF1"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:srcCompat="@drawable/location_icon"
        android:contentDescription="@string/appicon" />

    <TextView
        android:layout_marginBottom="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_to_your_account"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editPasswords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="20dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="false"/>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:id="@+id/googleSignin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:elevation="3dp"
        android:background="@drawable/background_button_google"
        >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:src="@drawable/google_icon"
            android:layout_marginEnd="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/notCreatedAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/not_have_an_account_click_here"
        android:textColor="@color/RedAccent"
        android:textSize="14sp" />

    <ProgressBar
        android:layout_marginTop="20dp"
        android:id="@+id/progressBarLogin"
        style="?android:attr/progressBarStyle"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>