<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    tools:context=".MainActivity">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:onClick="getLocation"
        android:text="@string/get_location_through_network"
        tools:ignore="UsingOnClickInXml" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/latitude"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/latitude"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/longitude"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/longitude"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:onClick="getLocationGPS"
        android:text="@string/get_location_through_gps"
        tools:ignore="UsingOnClickInXml" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/latitude"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/latitude2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/longitude"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/longitude2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

</LinearLayout>